fix(portal-navigation): add missing space between `meta-left` and `meta-right` meta bar slots

--- a/packages/portal-navigation/src/styles.css
+++ b/packages/portal-navigation/src/styles.css
@@ -28,6 +28,7 @@
 
 .meta-bar > .inner {
   display: flex;
+  justify-content: space-between;
 }
 
 .meta-bar:empty {
